change syntax highlighting theme, adjust fonts, add 404

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
-layout: default
+layout: page
 ---
 
-<div class="header">
+<!-- <div class="header">
 <div class="title"><a href="{{ '/' | absolute_url }}">{{ site.title }} | {{ site.tagline }}</a></div>
 {{ site.description }}
 </div>
 
-<hr>
+<hr> -->
 
 <div class="posts">
 {% for post in site.posts %}
